--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=appointment-service
+
+#PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost/appointmentDB
+spring.datasource.username=postgres
+spring.datasource.password=Bos$40160
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+spring.jpa.defer-datasource-initialization=true
+server.servlet.session.cookie.same-site=strict
+
+
